--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: projectsforge/ubuntu-16.04-java8-oracle
 
 stages:
   - build
-#  - test
+  - test
   - deploy
 
 before_script:
@@ -34,30 +34,30 @@ build_merge_job:
     - docker
     
 # sonar preview of the current branch state applied on latest state of the master branch
-test_sonar_preview_job:
-  stage: test
-  except:
-    - master
-    - tags
-  script:
-    - git config user.email "gitlab@projectsforge.org"
-    - git config user.name "GitLab CI"
-    - git merge origin master --no-commit --no-ff
-    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.analysis.mode=preview -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.login=$SONAR_USER -Dsonar.password=$SONAR_PASSWORD "-Dsonar.host.url=https://sonar.projectsforge.org" -Dsonar.useWsCache=false -Dmaven.javadoc.skip=true -Dmaven.source.skip=true
-    - sed  's/.*Total.*>\([0-9]\{1,3\}\)[ ]*%.*/Coverage = \1%/' target/site/jacoco/index.html
-  tags:
-    - docker
+#test_sonar_preview_job:
+#  stage: test
+#  except:
+#    - master
+#    - tags
+#  script:
+#    - git config user.email "gitlab@projectsforge.org"
+#    - git config user.name "GitLab CI"
+#    - git merge origin master --no-commit --no-ff
+#    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.analysis.mode=preview -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.login=$SONAR_USER -Dsonar.password=$SONAR_PASSWORD "-Dsonar.host.url=https://sonar.projectsforge.org" -Dsonar.useWsCache=false -Dmaven.javadoc.skip=true -Dmaven.source.skip=true
+#    - sed  's/.*Total.*>\([0-9]\{1,3\}\)[ ]*%.*/Coverage = \1%/' target/site/jacoco/index.html
+#  tags:
+#    - docker
 
 # sonar on the master
-test_sonar_job:
-  stage: test
-  only:
-    - master
-  script:
-    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.login=$SONAR_USER -Dsonar.password=$SONAR_PASSWORD "-Dsonar.host.url=https://sonar.projectsforge.org" -Dsonar.useWsCache=false -Dmaven.javadoc.skip=true -Dmaven.source.skip=true
-    - sed  's/.*Total.*>\([0-9]\{1,3\}\)[ ]*%.*/Coverage = \1%/' target/site/jacoco/index.html
-  tags:
-    - docker
+#test_sonar_job:
+#  stage: test
+#  only:
+#    - master
+#  script:
+#    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.login=$SONAR_USER -Dsonar.password=$SONAR_PASSWORD "-Dsonar.host.url=https://sonar.projectsforge.org" -Dsonar.useWsCache=false -Dmaven.javadoc.skip=true -Dmaven.source.skip=true
+#    - sed  's/.*Total.*>\([0-9]\{1,3\}\)[ ]*%.*/Coverage = \1%/' target/site/jacoco/index.html
+#  tags:
+#    - docker
 
 # deploy master (should be a SNAPSHOT)
 deploy_job:
